--- a/app/stylesheets/list.less
+++ b/app/stylesheets/list.less
@@ -90,6 +90,12 @@
   max-width: 100px;
   .text-overflow();
 }
+.tag .icon-text {
+  margin-right: 0;
+}
+.tag a {
+  color: #fff;
+}
 .tag:first-of-type {
   margin-left: 0;
 }
