--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -266,7 +266,7 @@ a:hover .action-icon {
 
 .icon-text {
   display: inline-block;
-  padding-right: 10px;
+  margin-right: 10px;
 }
 
 .calendar {
