--- a/app/stylesheets/layout.less
+++ b/app/stylesheets/layout.less
@@ -121,3 +121,13 @@ body {
 .main-content .nav {
   margin-bottom: 10px;
 }
+
+.article .item-tags {
+  position: static;
+  margin-left: 24px;
+  margin-right: 12px;
+}
+.article .page-header h2 {
+  width: 100%;
+  max-width: 100%;
+}
