--- a/app/stylesheets/list.less
+++ b/app/stylesheets/list.less
@@ -55,6 +55,7 @@
 }
 
 .item-title {
+  cursor: pointer;
   flex: 1;
   display: inline-block;
   line-height: 1.5;
@@ -75,6 +76,7 @@
   display: inline-block;
   position: absolute;
   right: 0;
+  margin-bottom: 0px;
 }
 
 /* tool */
