--- a/app/stylesheets/layout.less
+++ b/app/stylesheets/layout.less
@@ -122,6 +122,23 @@ body {
   margin-bottom: 10px;
 }
 
+.markdown img {
+  max-width: 100%;
+}
+.editormd {
+  z-index: 1000;
+}
+.comments h3 {
+  padding-bottom: 12px;
+  border-bottom: solid 1px #f0ad4e;
+}
+.comments > ul > li {
+  border-bottom: solid 1px #e6e6e6;
+}
+.add-comment {
+  flex: 1;
+}
+
 .article-viewer .item-tags {
   position: static;
 }
@@ -147,18 +164,15 @@ body {
   display: inline-block;
   margin-right: 10px;
 }
-.comments h4 {
+.answers h4 {
   border-bottom: solid 2px #ccc;
   padding-bottom: 10px;
 }
-.comments article {
+.answers article {
   border-bottom: solid 1px #eee;
 }
 .article-viewer-column {
   width: 60px;
-}
-.add-comment {
-  flex: 1;
 }
 .add-answer {
   flex: 1;
