basic question is ok

--- a/app/stylesheets/list.less
+++ b/app/stylesheets/list.less
@@ -89,7 +89,7 @@
   font-size: 11px;
   white-space: nowrap;
   margin-left: 6px;
-  color: #fff;
+  color: #fff !important;
   background-color: #7266bb;
   max-width: 100px;
   .text-overflow();
