--- a/app/stylesheets/layout.less
+++ b/app/stylesheets/layout.less
@@ -177,6 +177,7 @@ body {
 .add-answer {
   flex: 1;
 }
+
 .vote-widget {
   width: 40px;
   display: flex;
@@ -185,7 +186,24 @@ body {
   background: #f3f3f3;
   border-radius: 2px;
   box-shadow: 0 1px 1px rgba(0,0,0,.3);
+  margin-bottom: 10px;
 }
 .vote-widget .glyphicon {
   cursor: pointer;
+}
+
+.accept-widget {
+  width: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  cursor: pointer;
+  font-size: 12px;
+}
+.accept-widget .glyphicon {
+  font-size: 18px;
+  margin-bottom: 5px;
+}
+.accept-widget.accepted .glyphicon{
+  color: #563d7c;
 }
