--- a/app/stylesheets/layout.less
+++ b/app/stylesheets/layout.less
@@ -164,17 +164,17 @@ body {
   display: inline-block;
   margin-right: 10px;
 }
-.answers h4 {
+.replies h4 {
   border-bottom: solid 2px #ccc;
   padding-bottom: 10px;
 }
-.answers article {
+.replies article {
   border-bottom: solid 1px #eee;
 }
 .article-viewer-column {
   width: 60px;
 }
-.add-answer {
+.add-reply {
   flex: 1;
 }
 
