--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -325,6 +325,10 @@ a:hover .action-icon {
   background-color: #dff0d8 !important; 
 }
 
+.pointer {
+  cursor: pointer;
+}
+
 .welcome-masthead {
   padding: 40px;
   background: #722f9d;
