--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -334,6 +334,7 @@ a:hover .action-icon {
   background: #722f9d;
   color: #fff;
   text-align: center;
+  margin-bottom: 20px;
 }
 .welcome-masthead.know {
   background: #7266bb;
@@ -341,11 +342,7 @@ a:hover .action-icon {
 .welcome-masthead .logo{
   margin: 20px;
 }
-.lead{
-  margin: 0 auto;
-}
 .welcome-features {
-  padding: 30px 0;
   text-align: center;
 }
 .welcome-features .split > * {
