--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -84,7 +84,7 @@
 }
 .validation-summary-errors { color: #b94a48; }
 .validation-summary-valid { display: none; }
-ul, menu, dir { list-style-type: none; text-indent: 0px; padding: initial; padding-left: 0; }
+ul, menu, dir { list-style-type: none; text-indent: 0px; padding-left: 0; }
 pre code {
   white-space: pre-wrap !important;
 }
