--- a/app/stylesheets/form.less
+++ b/app/stylesheets/form.less
@@ -57,7 +57,8 @@
   padding: 7px 0;
 }
 .form-control-static {
-  display: block;
+  display: inline-block;
+  width: 100%;
 }
 
 .ReactTags__tags .input-group {
