auto create dept project

--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -271,7 +271,8 @@ a:hover .action-icon {
 }
 
 .icon-text {
-  display: inline;
+  display: inline-block;
+  margin-right: 10px;
 }
 .icon-text > .text {
   display: inline;
