--- a/views/login.html
+++ b/views/login.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Task Track</title>
   <!--<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900"/>-->
-  <link rel="stylesheet" href="/css/main.css" />
+  <link rel="stylesheet" href="/public/css/main.css" />
 </head>
 
 <body>
@@ -33,7 +33,7 @@
       </div>
     </form>
   </div>
-  <script src="/js/vendor.js"></script>
+  <script src="/public/js/vendor.js"></script>
 </body>
 
 </html>
