--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -241,6 +241,8 @@ a:hover .action-icon {
   list-style: none;
   padding: 0;
   margin: 0;
+  max-height: 240px;
+  overflow-y: auto;
 }
 .selector-list > li {
   margin: 0 0 1px 0;
