--- a/app/stylesheets/form.less
+++ b/app/stylesheets/form.less
@@ -42,7 +42,8 @@
 }
 .smart-form .form-item {
   display: flex;
-  padding: 5px 0 10px 0;
+  padding: 0;
+  padding-bottom: 10px;
 }
 .form-item > .item-label {
   font-size: 14px;
