--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -129,11 +129,11 @@ pre code {
   padding: 0;
 }
 .section-item {
+  padding: 10px;
   padding-left: 40px;
   padding-right: 20px;
   margin-bottom: 1px;
-  line-height: 40px;
-  .text-overflow();
+  line-height: 1.5;
 }
 .section-header:hover, .section-item.active, .section-item:hover {
     background: #e6e6e6;
