--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -120,9 +120,10 @@ pre code {
 
 /* section */
 .section-header {
-  padding: 0 12px;
+  padding: 10px 12px;
+  padding-right: 20px;
   margin-bottom: 1px;
-  line-height: 40px;
+  .text-overflow();
 }
 .section-body {
   list-style-type: none;
@@ -133,7 +134,6 @@ pre code {
   padding-left: 40px;
   padding-right: 20px;
   margin-bottom: 1px;
-  line-height: 1.5;
 }
 .section-header:hover, .section-item.active, .section-item:hover {
     background: #e6e6e6;
