my managed projects

--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -15,7 +15,7 @@
  
 @text-color: #6a6a6a;
 @font-family-base: 'Helvetica Neue','Hiragino Sans GB',stheiti,'Microsoft Yahei','微软雅黑',tahoma,sans-serif;
-@link-color: #4e545f;
+@link-color: #337ab7;
 @link-hover-color: #141718;
 
 //@navbar-default-bg: #fff;
@@ -257,6 +257,7 @@ a:hover .action-icon {
 .selector-list > li > span:hover,
 .selector-list > li > span:active {
   cursor: pointer;
+  color: @link-color;
   display: block;
   padding: 10px 10px;
   text-decoration: none;
@@ -337,6 +338,7 @@ a:hover .action-icon {
 
 .pointer {
   cursor: pointer;
+  color: @link-color;
 }
 
 .welcome-masthead {
