--- a/app/stylesheets/list.less
+++ b/app/stylesheets/list.less
@@ -189,6 +189,7 @@
   padding: 5px;
   margin-bottom: 6px;
   cursor: pointer;
+  color: @link-color;
 }
 .pad-list .list-item:hover {
   background: #fbfbfb;
